# axylith-physics-engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: _setup.yml  ci.yml  codeql.yml
docs/: grammar.ebnf  test_cases.md
include/: axylith_phys.h  lexer.h  parser.h  units.h
src/: evaluator.cpp  lexer.cpp  parser.cpp
tests/: tester.cpp
